Eliminate compilation warnings.