@@ -189,15 +189,15 @@ public class CommandLineProgram
 		     }
 		     else if (parameterClass.equals(Boolean.class))
 		     {
-			setter.invoke(this, new Boolean(sValue));
+			setter.invoke(this, Boolean.valueOf(sValue));
 		     }
 		     else if (parameterClass.equals(Integer.class))
 		     {
-			setter.invoke(this, new Integer(sValue));
+			setter.invoke(this, Integer.valueOf(sValue));
 		     }
 		     else if (parameterClass.equals(Double.class))
 		     {
-			setter.invoke(this, new Double(sValue));
+			setter.invoke(this, Double.valueOf(sValue));
 		     }
 		     else if (parameterClass.equals(URL.class))
 		     {
@@ -376,15 +376,15 @@ public class CommandLineProgram
 			}
 			else if (parameterClass.equals(Boolean.class))
 			{
-			   setter.invoke(this, new Boolean(sValue));
+			   setter.invoke(this, Boolean.valueOf(sValue));
 			}
 			else if (parameterClass.equals(Integer.class))
 			{
-			   setter.invoke(this, new Integer(sValue));
+			   setter.invoke(this, Integer.valueOf(sValue));
 			}
 			else if (parameterClass.equals(Double.class))
 			{
-			   setter.invoke(this, new Boolean(sValue));
+			   setter.invoke(this, Boolean.valueOf(sValue));
 			}
 			else if (parameterClass.equals(URL.class))
 			{
